# aricuic-learn

./: .gitignore
code/: CMakeLists.txt
code/phase1/: 2d_convolution.cpp  im2col.cpp
docs/: learning-plan.md
docs/aricuir_tex_src/: 00README.json  relatedworks.bib  revised_version_1.tex
docs/aricuir_tex_src/sec/: abstract.tex  appendix.tex  bio.tex  conclusion.tex  experimental-result.tex  introduction.tex  method.tex  related-work.tex
